[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Backgrounds/darkPurple.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy Spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/PNG/Effects/star1.png" type="Texture" id=6]
[ext_resource path="res://Assets/PNG/Effects/star3.png" type="Texture" id=7]
[ext_resource path="res://Assets/PNG/Effects/star2.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 275.5, 17.5 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 270, 480 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )

[node name="Enemy Spawner" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 270, 50 )
__meta__ = {
"_edit_group_": true
}

[node name="Player2" parent="." instance=ExtResource( 5 )]
position = Vector2( 270, 300 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 265.5, -16.5 )
shape = SubResource( 1 )

[node name="EnemyMass" type="Timer" parent="."]
wait_time = 3.0

[node name="Star1" type="Sprite" parent="."]
position = Vector2( 53, 685 )
texture = ExtResource( 6 )

[node name="Star2" type="Sprite" parent="."]
position = Vector2( 412, 126 )
texture = ExtResource( 8 )

[node name="Star3" type="Sprite" parent="."]
position = Vector2( 426, 602 )
texture = ExtResource( 7 )

[node name="Star4" type="Sprite" parent="."]
position = Vector2( 132, 230 )
texture = ExtResource( 6 )

[node name="Star5" type="Sprite" parent="."]
position = Vector2( 277, 376 )
texture = ExtResource( 8 )

[node name="Star6" type="Sprite" parent="."]
position = Vector2( 370, 824 )
texture = ExtResource( 7 )

[node name="Star7" type="Sprite" parent="."]
position = Vector2( 147, 822 )
texture = ExtResource( 8 )

[node name="Star8" type="Sprite" parent="."]
position = Vector2( 266, 511 )
texture = ExtResource( 6 )

[node name="Star9" type="Sprite" parent="."]
position = Vector2( 456, 266 )
texture = ExtResource( 7 )

[node name="Star10" type="Sprite" parent="."]
position = Vector2( 67, 30 )
texture = ExtResource( 6 )

[node name="Star11" type="Sprite" parent="."]
position = Vector2( 69, 374 )
texture = ExtResource( 8 )

[connection signal="spawn_laser" from="Player" to="." method="_on_Player_spawn_laser"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="EnemyMass" to="." method="_on_EnemyMass_timeout"]
